[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/new/my_ship_tilemap.svg" type="Texture" id=1]
[ext_resource path="res://scene/protatape/StearingAiVersion/Draw.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/protatape/StearingAiVersion/Plane1.gd" type="Script" id=3]
[ext_resource path="res://assets/atlas/game_src.png" type="Texture" id=4]

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 0, -58, 13, -42, 18, -12, 15, 27, 12, 58, -11, 57, -17, 30, -17, -10, -14, -40 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1479, 125, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 193, 0, 71, 231 )

[sub_resource type="Animation" id=3]
resource_name = "Chose"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Exit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "start_speed"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 150 ]
}

[sub_resource type="RectangleShape2D" id=6]

[node name="Plane" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 3 )
draw = ExtResource( 2 )
speed = 0

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 9 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
rotation = -1.5708
scale = Vector2( 0.1, 0.1 )
texture = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.4 )
texture = SubResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -1 )
rotation = -1.5708
polygon = PoolVector2Array( 56, -0.999797, 42, 11.0002, 8.99994, 16, -44, 13.9998, -58, 9.99979, -58, -11.0002, -44.9999, -15.0002, 9.00006, -17, 44, -10.9998 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Chose = SubResource( 3 )
anims/Exit = SubResource( 5 )
anims/RESET = SubResource( 4 )
anims/start_speed = SubResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
rotation = -1.5708
scale = Vector2( 4.8, 4.8 )
shape = SubResource( 6 )
shape_centered = false

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
